@@ -25,19 +25,18 @@ package io.crate.user;
 import com.google.common.collect.ImmutableMap;
 import io.crate.data.Row;
 import io.crate.expression.symbol.Literal;
+import io.crate.expression.symbol.Symbol;
 import io.crate.metadata.CoordinatorTxnCtx;
-import io.crate.metadata.TransactionContext;
 import io.crate.metadata.Functions;
+import io.crate.metadata.TransactionContext;
+import io.crate.sql.tree.GenericProperties;
 import io.crate.test.integration.CrateUnitTest;
 import io.crate.types.DataTypes;
 import org.elasticsearch.common.settings.SecureString;
 import org.hamcrest.Matchers;
 import org.junit.Test;
 
-import java.util.Collections;
-
-import static java.util.Collections.emptyMap;
-import static java.util.Collections.singletonMap;
+import java.util.Map;
 
 public class UserActionsTest extends CrateUnitTest {
 
@@ -50,8 +49,8 @@ public class UserActionsTest extends CrateUnitTest {
 
     @Test
     public void testSecureHashIsGeneratedFromPasswordProperty() throws Exception {
-        SecureHash secureHash = UserActions.generateSecureHash(
-            Collections.singletonMap("password", Literal.of("password")), Row.EMPTY, txnCtx, functions);
+        GenericProperties<Symbol> properties = new GenericProperties<>(Map.of("password", Literal.of("password")));
+        SecureHash secureHash = UserActions.generateSecureHash(properties, Row.EMPTY, txnCtx, functions);
         assertThat(secureHash, Matchers.notNullValue());
 
         SecureString password = new SecureString("password".toCharArray());
@@ -60,35 +59,39 @@ public class UserActionsTest extends CrateUnitTest {
 
     @Test
     public void testNoSecureHashIfPasswordPropertyNotPresent() throws Exception {
-        SecureHash secureHash = UserActions.generateSecureHash(emptyMap(), Row.EMPTY, txnCtx, functions);
+        SecureHash secureHash = UserActions.generateSecureHash(GenericProperties.empty(), Row.EMPTY, txnCtx, functions);
         assertNull(secureHash);
     }
 
     @Test
     public void testPasswordMustNotBeEmptyErrorIsRaisedIfPasswordIsEmpty() throws Exception {
+        GenericProperties<Symbol> properties = new GenericProperties<>(Map.of("password", Literal.of("")));
+
         expectedException.expect(IllegalArgumentException.class);
         expectedException.expectMessage("Password must not be empty");
-        UserActions.generateSecureHash(singletonMap("password", Literal.of("")), Row.EMPTY, txnCtx, functions);
+        UserActions.generateSecureHash(properties, Row.EMPTY, txnCtx, functions);
     }
 
     @Test
     public void testUserPasswordProperty() throws Exception {
-        SecureString password = UserActions.getUserPasswordProperty(
-            ImmutableMap.of("password", Literal.of("my-pass")), Row.EMPTY, txnCtx, functions);
+        GenericProperties<Symbol> properties = new GenericProperties<>(Map.of("password", Literal.of("my-pass")));
+        SecureString password = UserActions.getUserPasswordProperty(properties, Row.EMPTY, txnCtx, functions);
         assertEquals(new SecureString("my-pass".toCharArray()), password);
     }
 
     @Test
     public void testNoPasswordIfPropertyIsNull() throws Exception {
-        SecureString password = UserActions.getUserPasswordProperty(
-            ImmutableMap.of("password", Literal.of(DataTypes.UNDEFINED, null)), Row.EMPTY, txnCtx, functions);
+        GenericProperties<Symbol> properties = new GenericProperties<>(
+            Map.of("password", Literal.of(DataTypes.UNDEFINED, null)));
+        SecureString password = UserActions.getUserPasswordProperty(properties, Row.EMPTY, txnCtx, functions);
         assertNull(password);
     }
 
     @Test
     public void testInvalidPasswordProperty() throws Exception {
+        GenericProperties<Symbol> properties = new GenericProperties<>(Map.of("invalid", Literal.of("password")));
         expectedException.expect(IllegalArgumentException.class);
         expectedException.expectMessage("\"invalid\" is not a valid user property");
-        UserActions.getUserPasswordProperty(ImmutableMap.of("invalid", Literal.of("password")), Row.EMPTY, txnCtx, functions);
+        UserActions.generateSecureHash(properties, Row.EMPTY, txnCtx, functions);
     }
 }
